<resources>
    <string name="app_name">Code Game</string>
    <string name="client_id" translatable="false">12991345098-slmgq4feht9gtl70iq25369t9n454m6o.apps.googleusercontent.com</string>
    <string name="play">PLAY</string>
    <string name="back">Back</string>
    <string name="title_activity_game" translatable="false">GameActivity</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="retry">Retry</string>
    <string name="home">Home</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="game_over">Game Over</string>
    <string name="completed">Completed</string>
    <string name="next_level">Next Level</string>
    <string name="settings">Settings</string>
    <string name="language">English</string>
    <string name="cars">Cars</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_out">Log Out</string>
    <string name="incorrect_email">Email is incorrect</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="incorrect_email_or_password">Incorrect email or password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_not_match">Password not match</string>
    <string name="not_contain_upper_case">Not contain upper case</string>
    <string name="not_contain_lower_case">Not contain lower case</string>
    <string name="not_contain_digit">Not contain digit</string>
    <string name="registered_email">This email has been registered</string>
    <string name="jump">Jump</string>
    <string name="repeat">"Repeat "</string>
    <string name="condition">If</string>
    <string name="log">Log</string>
    <string name="end_repeat">End repeat</string>
    <string name="end_condition">End condition</string>
    <string name="people">Person</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="question_user_progress">Want to update user progress?</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="log_in_google">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="submit">Submit</string>
</resources>