<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/completed"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="60dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/retryButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/retry"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <Button
            android:id="@+id/nextLevelButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/next_level"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <Button
            android:id="@+id/homeButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/home"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="28sp" />

    </LinearLayout>

</LinearLayout>