<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="600dp"
    android:layout_height="250dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/game_over"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="60dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        >

        <Button
            android:id="@+id/retryButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:background="@drawable/button_enable"
            android:text="@string/retry"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:drawableTop="@drawable/ic_baseline_replay_48" />

        <Button
            android:id="@+id/homeButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:background="@drawable/button_enable"
            android:text="@string/home"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:drawableTop="@drawable/ic_baseline_home_48"/>

    </LinearLayout>

</LinearLayout>