<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_sky_background"
    android:orientation="vertical"
    tools:context=".SignIn">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60dp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="128dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="12dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="128dp"
                android:layout_marginTop="8dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="12dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/authenticationButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="128dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:textStyle="bold" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/googleSignInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="128dp"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/createAccountLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="128dp"
                android:layout_marginVertical="16dp"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>