<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="600dp"
    android:layout_height="300dp"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="600dp"
            android:layout_height="300dp"
            android:orientation="vertical"
            android:background="@drawable/code_view_layout">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/settings"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="60dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/soundButton"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="32dp"
                    android:background="@drawable/button"
                    android:src="@drawable/ic_baseline_volume_up_48" />

                <ImageButton
                    android:id="@+id/vibrationButton"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="32dp"
                    android:background="@drawable/button"
                    android:src="@drawable/ic_baseline_vibration_48" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/leftButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/left_button"
                    android:src="@drawable/ic_baseline_keyboard_arrow_left_48" />

                <TextView
                    android:id="@+id/languageTextView"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:background="@drawable/text_box"
                    android:gravity="center"
                    android:text="@string/language"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="30dp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/rightButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/right_button"
                    android:src="@drawable/ic_baseline_keyboard_arrow_right_48" />

            </LinearLayout>

            <Button
                android:id="@+id/authenticationButton"
                android:layout_width="308dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="4dp"
                android:layout_gravity="center"
                android:background="@drawable/button"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="right|top"
            android:background="@drawable/close_button"
            android:src="@drawable/ic_baseline_close_48" />

    </FrameLayout>

</LinearLayout>